# CircuitPython_WaveBuilder

./: .gitmodules  LICENSE  README.rst  README.rst.license  cedargrove_wavebuilder.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: cedargrove_wavegroup.py  cedargrove_wavetile.py  highhat.py  wavebuilder_adsr_test.py  wavebuilder_chime_example.py  wavebuilder_simpletest.py
